--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# This file was developed by Thomas Müller <thomas94@gmx.net>.
+# This file was developed by Thomas Müller <contact@tom94.net>.
 # It is published under the BSD 3-Clause License within the LICENSE.md file.
 
 cmake_minimum_required(VERSION 2.8.12)
